# pydesrap_stroke

./: .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  lint.sh  pyproject.toml  requirements.txt  run_notebooks.sh
.github/workflows/: lint.yaml  temp-lint.yaml  temp-tests.yaml  tests.yaml
docs/: heather_2025.md  hsma_changes.md  log.md  nhs_rap.md  quality_assurance.md  stars_reproducibility_recommendations.md  stress_des.md
images/: model_structure.drawio  replications_algorithm.drawio  replications_statistics.drawio
inputs/: data_dictionary.md  parameters.csv  parameters.json
notebooks/: analysis.ipynb  choosing_cores.ipynb  choosing_replications.ipynb  choosing_warmup.ipynb  generate_exp_results.ipynb  logs.ipynb  parameters_csv.ipynb  time_weighted_averages.ipynb
outputs/: delay_s1.csv  delay_scenario1.csv  delay_scenario4.csv  example_interval_audit.csv  example_overall.csv  example_run.csv  pooling.csv  scenario_nurse_util.tex  sensitivity_consult_time.tex  suptable1.csv  table2.csv  table3.csv
simulation/: __init__.py  distributions.py  helper.py  lockeddict.py  logging.py  model.py  parameters.py  patient.py  replications.py  restrictattributes.py  runner.py
tests/: test_backtest.py  test_backtest_replications.py  test_functionaltest.py  test_functionaltest_replications.py  test_unittest.py  test_unittest_replications.py
tests/exp_results/: asu_occupancy.csv  audit_list.csv  interval.csv  overall.csv  patient.csv  rehab_occupancy.csv  replications.csv  run.csv  scenario.csv
