[build-system]
requires = ["flit"]
build-backend = "flit_core.buildapi"

[project]
name = "simulation"
description = "Stroke capacity planning model."
authors = [
  {name = "Amy Heather", email = "a.heather2@exeter.ac.uk"},
  {name = "Tom Monks", email = "t.m.w.monks@exeter.ac.uk"}
]
dynamic = ["version"]